Add equity near-zero summary table

--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
       </section>
 
       <section class="panel">
+        <h2>Equity 接近 0 的時間點</h2>
+        <p class="hint">門檻：Equity ≤ 0.05，顯示首次跌破門檻時的日期與後續最大漲幅點數。</p>
+        <div class="table-wrapper">
+          <table id="equityNearZeroTable">
+            <thead>
+              <tr>
+                <th>日期</th>
+                <th>Equity</th>
+                <th>收盤</th>
+                <th>後續最大漲幅點數</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </section>
+
+      <section class="panel">
         <h2>觸發事件列表</h2>
         <div class="table-wrapper">
           <table id="eventsTable">
