Add date range filtering for backtests

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <h2>參數設定</h2>
         <div class="form-grid">
           <label>
+            回測起始日
+            <input type="date" id="startDate" />
+          </label>
+          <label>
+            回測結束日
+            <input type="date" id="endDate" />
+          </label>
+          <label>
             初始資金
             <input
               type="number"
