--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 <th>事件</th>
                 <th>季線狀態</th>
                 <th>更新後倍率</th>
+                <th>漲跌點數</th>
               </tr>
             </thead>
             <tbody></tbody>
