Add leverage display and change tracking

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
             <strong id="tradesCount">—</strong>
           </div>
           <div>
+            <span class="label">最新口數</span>
+            <strong id="latestLeverage">—</strong>
+          </div>
+          <div>
             <span class="label">總點數</span>
             <strong id="totalPoints">—</strong>
           </div>
@@ -166,7 +170,9 @@
                 <th>Event Date（昨天）</th>
                 <th>事件</th>
                 <th>季線狀態</th>
-                <th>更新後倍率</th>
+                <th>變動前口數</th>
+                <th>更新後口數</th>
+                <th>口數變動</th>
                 <th>漲跌點數</th>
               </tr>
             </thead>
